--- a/prac_08/convert_miles_to_km.kv
+++ b/prac_08/convert_miles_to_km.kv
@@ -6,19 +6,21 @@ BoxLayout:
             id: miles
             text: '1'
             multiline: False
-            on_text_validate: print("Hello")
+            on_text_validate: app.handle_calculate()
         BoxLayout:
             orientation: 'vertical'
-#            size_hint_x: 0.25
+            size_hint_x: 0.25
             Button:
                 text: 'Up'
                 on_press: app.change_counter(1)
+                on_press: app.handle_calculate()
             Button:
                 text: 'Down'
                 on_press: app.change_counter(-1)
-    Button:
-        text: 'Convert'
-        on_press: app.handle_calculate()
+                on_press: app.handle_calculate()
+#    Button:
+#        text: 'Convert'
+#        on_press: app.handle_calculate()
 
     Label:
         id: output_label
