--- a/prac_08/convert_miles_to_km.kv
+++ b/prac_08/convert_miles_to_km.kv
@@ -13,11 +13,11 @@ BoxLayout:
             Button:
                 text: 'Up'
                 on_press: app.change_counter(1)
-                on_press: app.handle_calculate()
+                on_release: app.handle_calculate()
             Button:
                 text: 'Down'
                 on_press: app.change_counter(-1)
-                on_press: app.handle_calculate()
+                on_release: app.handle_calculate()
 #    Button:
 #        text: 'Convert'
 #        on_press: app.handle_calculate()
